# eMQTT5

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  eMQTT5.pc.in
.circleci/: config.yml
doc/: APIDoc.md  ClientAPI.md
lib/: CMakeLists.txt
lib/include/: MQTTTypes.hpp  Types.hpp
lib/include/Network/Clients/: MQTT.hpp  MQTTConfig.hpp
lib/include/Platform/: Platform.hpp  StackHeapBuffer.hpp
lib/include/Protocol/MQTT/: MQTT.hpp
lib/src/Network/Clients/: MQTTClient.cpp
lib/src/Platform/: Posix.cpp  Windows.cpp
tests/: CMakeLists.txt  MQTTParsePacket.cpp  MQTTc.cpp  RingBufferTests.cpp  SerializationTests.cpp
tests/ClassPath/include/Container/: Bool2Type.hpp  Container.hpp  Deleters.hpp
tests/ClassPath/include/Hash/: Hasher.hpp  RobinHoodHashTable.hpp  StringHash.hpp
tests/ClassPath/include/Logger/: Logger.hpp  LoggerMinimal.hpp
tests/ClassPath/include/Network/: Address.hpp  Socket.hpp
tests/ClassPath/include/Platform/: Arguments.hpp
tests/ClassPath/include/Strings/: Strings.hpp  VerySimpleReadOnlyString.hpp  bstring.hpp
tests/ClassPath/include/Strings/BString/: bstrlib.h
tests/ClassPath/include/Threading/: Lock.hpp
tests/ClassPath/include/Time/: Time.hpp  Timeout.hpp
tests/ClassPath/include/Utils/: Assert.hpp  Dump.hpp  StaticAssert.hpp
tests/ClassPath/src/: Address.cpp  Dump.cpp  HashKey.cpp  LinuxSpecific.cpp  Lock.cpp  Logger.cpp  Socket.cpp  Strings.cpp  Time.cpp  Windows.cpp  bstrlib.c  bstrwrap.cpp
